# llm-tutor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANUAL.md  README.md
.cargo/: config.toml
.github/workflows/: release-desktop.yml
crates/tutor-agent/: Cargo.toml
crates/tutor-agent/src/: capability.rs  chat.rs  code_exec.rs  deep_solve_events.rs  error.rs  event_sink.rs  governance.rs  knowledge.rs  lib.rs  llm_provider.rs  main.rs  memory.rs  phase_manager.rs  quiz.rs  replan_hook.rs  replan_tool.rs  research.rs  runtime_engine.rs  runtime_harness.rs  runtime_workflow.rs  solve_context.rs  solve_orchestrator.rs  terminal_approver.rs
crates/tutor-agent/tests/: deep_solve_integration.rs  mock_integration.rs
crates/tutor-rag/: Cargo.toml
crates/tutor-rag/src/: knowledge_source.rs  lib.rs
crates/tutor-tools/: Cargo.toml
crates/tutor-tools/src/: code_exec.rs  lib.rs  rag_search.rs  read_memory.rs  text_decode.rs  web_fetch.rs  web_search.rs  write_memory.rs
crates/tutor-web/: Cargo.toml
crates/tutor-web/src/: book_store.rs  knowledge_runtime.rs  knowledge_store.rs  lib.rs  main.rs  memory_store.rs  memory_tool.rs  notebook_store.rs  quiz_store.rs  quiz_tool.rs  research_tool.rs  session.rs  settings_store.rs  space_tool.rs  stream.rs  tutor_memory_store.rs  tutor_memory_tool.rs  tutor_store.rs
crates/tutor-web/src/routes/: books.rs  knowledge.rs  memory.rs  mod.rs  notebook.rs  quiz.rs  sessions.rs  settings.rs  space.rs  tutors.rs  ws.rs
crates/tutor-web/tests/: parent_pipe_lifecycle.rs
docs/: framework-feedback.md  runtime-migration-audit.md  runtime-tool-projections.json
docs/plans/: 2026-06-13-tutor-agent-phase1-skeleton.md  2026-06-13-tutor-agent-phase2-deep-solve.md  2026-06-13-tutor-agent-phase3-governance.md  2026-06-13-tutor-agent-phase4-web.md  2026-06-13-tutor-agent-phase5-docs.md  2026-06-20-ai-tutor-product-roadmap.md  2026-06-23-deep-solve-ux-plan.md  2026-06-23-quiz-mode-plan.md  2026-06-25-research-mode-plan.md  2026-06-26-next-product-slice-plan.md  2026-06-26-space-memory-implementation-plan.md  2026-06-26-space-workspace-plan.md  2026-06-28-source-reference-system-plan.md  2026-06-28-tauri-desktop-release-plan.md  2026-07-01-notebook-obsidian-plan.md  2026-07-13-background-session-resilience-plan.md  2026-07-15-persistent-tutor-implementation-plan.md  2026-07-17-product-onboarding-plan.md  2026-07-23-runtime-knowledge-a6-migration-plan.md  README.md
docs/plans/archive/: 2026-06-13-tutor-agent-phase2-deep-solve.md  2026-06-13-tutor-agent-phase3-governance.md  2026-06-13-tutor-agent-phase5-docs.md
docs/qa/: desktop-release.md  desktop-v0.1.md  knowledge-a6-acceptance.md
docs/specs/: 2026-06-13-tutor-agent-v0.1-design.md  2026-06-26-memory-consolidation-design.md  2026-06-26-product-requirements-spec.md  2026-07-15-persistent-tutor-design.md  README.md
scripts/: build-desktop.ps1  bump-version.ps1  check-tool-projections.ps1  check-version.mjs  dev-desktop.ps1  qa-desktop.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json  tauri.windows.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_window.rs
web-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web-ui/src/: App.tsx  agentStatus.ts  api.ts  chatScrollPosition.test.mjs  chatScrollPosition.ts  desktop.ts  i18n.tsx  index.css  knowledgeCitation.test.mjs  knowledgeCitation.ts  main.tsx  markdownMath.test.mjs  markdownMath.ts  memoryReview.test.mjs  memoryReview.ts  messageActions.test.mjs  messageActions.ts  notebookSave.test.mjs  notebookSave.ts  onboardingModes.test.mjs  onboardingModes.ts  productGuide.test.mjs  productGuide.ts  quizRestore.test.mjs  quizRestore.ts  quizSource.test.mjs  quizSource.ts  quizTypes.ts  researchRestore.test.mjs  researchRestore.ts  sessionResilience.test.mjs  sessionResilience.ts  settings.test.mjs  settings.ts  tutorChooserPlacement.test.mjs  tutorChooserPlacement.ts  tutorSession.test.mjs  tutorSession.ts  tutorTypes.test.mjs  tutorTypes.ts
web-ui/src/components/: ApprovalDialog.tsx  BooksPage.tsx  BudgetPanel.tsx  CapabilitySelector.tsx  ChatBox.tsx  ComposerGuidePreview.tsx  DeepSolveMessage.tsx  DesktopTitleBar.tsx  KnowledgePage.tsx  MarkdownMessage.tsx  MemoryPage.tsx  OnboardingDialog.tsx  OnboardingModeGuide.tsx  OnboardingResumeButton.tsx  PlaceholderPage.tsx  ProductGuide.tsx  QuizPage.tsx  ResearchReportMessage.tsx  SaveNotebookDialog.tsx  SettingsPage.tsx  Sidebar.tsx  SpacePage.tsx  TracePanel.tsx  TutorChooser.tsx  TutorPage.tsx
web-ui/src/hooks/: useWebSocket.ts
