[workspace]
members = [
    "crates/tutor-rag",
    "crates/tutor-tools",
    "crates/tutor-agent",
    "crates/tutor-web",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.2"
license = "MIT"

[workspace.dependencies]
# Core/runtime crates (same rev from llm-harness-runtime)
llm-harness-agent = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-agent" }
llm-harness-types = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-types" }
llm-harness-loop  = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-loop" }
llm-harness-runtime = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-runtime" }
llm-harness-runtime-sandbox-os = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-runtime-sandbox-os" }
llm-harness-runtime-audit-jsonl = { git = "https://github.com/oh-my-harness/llm-harness-runtime.git", rev = "e200c12a69b896a0d9ab70d2752f9dafcbfc07ad", package = "llm-harness-runtime-audit-jsonl" }

# LLM provider adapter
llm_adapter = { git = "https://github.com/oh-my-harness/llm-api-adapter", rev = "69a868f5c8aa33059900f132e9c93366d1e479c3" }

# Common
anyhow      = "1"
async-trait = "0.1"
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt"] }
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
lancedb = "0.30.0"
