[package]
name = "tutor-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tutor-agent"
path = "src/main.rs"

[dependencies]
tutor-tools = { path = "../tutor-tools" }
llm-harness        = { workspace = true }
llm-harness-types  = { workspace = true }
llm-harness-runtime = { workspace = true }
llm-harness-runtime-auth = { workspace = true }
llm-harness-runtime-sandbox-os = { workspace = true }
llm-harness-runtime-audit-jsonl = { workspace = true }
llm_adapter.workspace = true
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
