[package]
name = "tutor-rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
lancedb.workspace = true
llm_adapter_embedding.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
