[package]
name = "tutor-rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
lancedb.workspace = true
llm-harness-runtime-knowledge.workspace = true
llm-harness-types.workspace = true
llm_adapter.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
llm-harness-runtime-knowledge = { workspace = true, features = ["test-utils"] }
tempfile = "3"
