[package]
name = "tutor-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
llm-harness-types = { workspace = true }
llm-harness-runtime-sandbox-os = { workspace = true }
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3"
chrono = "0.4"
