[package]
name = "tutor-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tutor-rag = { path = "../tutor-rag" }
llm-harness-types = { workspace = true }
llm-harness-runtime-sandbox-os = { workspace = true }
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
chrono = "0.4"
