[package]
name = "tutor-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tutor-web"
path = "src/main.rs"

[dependencies]
tutor-agent = { path = "../tutor-agent" }
llm-harness-runtime = { workspace = true }
llm-harness-runtime-audit-jsonl = { workspace = true }
llm-harness-runtime-sandbox-os = { workspace = true }
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
