[package]
name = "tutor-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tutor-web"
path = "src/main.rs"

[dependencies]
tutor-agent = { path = "../tutor-agent" }
tutor-rag = { path = "../tutor-rag" }
tutor-tools = { path = "../tutor-tools" }
llm_adapter = { workspace = true }
llm-harness-agent = { workspace = true }
llm-harness-runtime = { workspace = true }
llm-harness-runtime-knowledge = { workspace = true }
llm-harness-types = { workspace = true }
llm-harness-runtime-audit-jsonl = { workspace = true }
llm-harness-runtime-sandbox-os = { workspace = true }
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
pdf-extract = "0.10.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
notify = "8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
